agregar columnas y asignar multiples franciones con la palabra clave repeat

--- a/index.html
+++ b/index.html
@@ -17,27 +17,18 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="grid">
-          <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ea.
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, dignissimos.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, laboriosam.
-            lorem10
-        </div>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ea?
-        </div>
-        <div>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ea?
-      </div>
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ea.
-    </div>
-    <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ea?
-    </div>
-    <div>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ea?
-  </div>
+         <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore assumenda quis pariatur ipsa quidem non commodi aut repellendus blanditiis modi?</div>
+         <div>Itaque temporibus laudantium, exercitationem nisi unde eos quidem. Ipsa iusto non molestiae laboriosam deleniti nostrum laborum sequi quidem exercitationem praesentium.</div>
+         <div>Eveniet quis provident laboriosam tempore enim ab, porro soluta debitis atque! Necessitatibus atque officia nostrum, voluptates voluptatum numquam aliquid cum.</div>
+         <div>Illo praesentium facere labore! Ad maiores labore itaque perspiciatis? Explicabo numquam exercitationem iste placeat aut aperiam doloribus maiores ipsum reiciendis?</div>
+         <div>Voluptates ipsam aut illum hic numquam molestiae quaerat! Beatae, dolorum minima possimus architecto eligendi rerum hic laudantium cum officia dolores?</div>
+         <div>Ex a eligendi officiis earum atque? Eius repudiandae alias expedita nisi, quo, provident laborum aut sit maxime et, a assumenda.</div>
+         <div>Dolore nulla officiis aperiam quasi sunt in, repellat eligendi nesciunt id quis quaerat sapiente consectetur, at impedit est maiores facilis!</div>
+         <div>Sit atque, assumenda dolore esse in deleniti aliquid, qui dolorem quaerat totam quae nam quibusdam adipisci rem nisi enim? Culpa!</div>
+         <div>Iusto magnam consectetur qui maiores maxime odio ipsam tenetur omnis repellat asperiores quaerat, voluptas rerum voluptatibus amet iste sunt ratione.</div>
+         <div>Pariatur totam aliquid repellendus molestias quo accusamus unde est distinctio expedita ad ipsa voluptatibus omnis debitis, velit modi nam eum?</div>
+         <div>Pariatur totam aliquid repellendus molestias quo accusamus unde est distinctio expedita ad ipsa voluptatibus omnis debitis, velit modi nam eum?</div>
+         <div>Pariatur totam aliquid repellendus molestias quo accusamus unde est distinctio expedita ad ipsa voluptatibus omnis debitis, velit modi nam eum?</div>
         </div>
    
         <script src="" async defer></script>
