Usos y diferencias align-items and justify-self

--- a/index.html
+++ b/index.html
@@ -17,27 +17,12 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="grid">
-         <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat cumque explicabo facere odio voluptatum. Aliquid reiciendis, placeat cum reprehenderit ratione voluptates eveniet excepturi ad repellat deleniti, molestias eum minus explicabo!
-         </div>
-         <div class="nested-grid">
-          <div>testing</div>
-          <div>testing</div>
-          <div>testing</div>
-          <div>testing</div>
-          <div>testing</div>
-          <div>testing</div>
-        
-        </div>
-        <div>Testing
-        </div>
-        <div>Testing
-        </div>
-         
-         <div>Voluptates ipsam aut illum hic numquam molestiae quaerat! Beatae, dolorum minima possimus architecto eligendi rerum hic laudantium cum officia dolores?</div>
-         <div>Ex a eligendi officiis earum atque? Eius repudiandae alias expedita nisi, quo, provident laborum aut sit maxime et, a assumenda.</div>
-         <div>Dolore nulla officiis aperiam quasi sunt in, repellat eligendi nesciunt id quis quaerat sapiente consectetur, at impedit est maiores facilis!</div>
-         <div>Sit atque, assumenda dolore esse in deleniti aliquid, qui dolorem quaerat totam quae nam quibusdam adipisci rem nisi enim? Culpa!</div>
-
+          <div class="element-one">element 1</div>
+          <div class="element-two">element 2</div>
+          <div class="element-three">element 3</div>
+          <div class="element-four">element 4</div>
+          <div class="element-five">element 5</div>
+          <div class="element-six">element 6</div>
         </div>
    
         <script src="" async defer></script>
